--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.10
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
+django-3-jet==1.0.8
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
@@ -21,6 +22,7 @@ pytz==2021.3
 requests==2.27.1
 ruamel.yaml==0.17.20
 ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.7
